[metadata]
name = schemadisplay_sphinx
summary = Sphinx Extension for Schema generation
description-file =
    README.rst
author = Victor Morales
author-email = electrocucaracha@gmail.com
home-page = http://electrocucaracha.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
	Topic :: Documentation

[files]
packages =
    schemadisplay_sphinx

